added more pages, media queries and overall page structure of template finalized

--- a/src/index.html
+++ b/src/index.html
@@ -81,10 +81,10 @@
     <h1>Menu</h1>
   </section>
   <section class="section2">
-    <h2>Contact</h2>
+    <h2>Events</h2>
   </section>
   <section class="section1">
-    <h1>Menu</h1>
+    <h1>Catering</h1>
   </section>
   <section class="lastSection">
     <h2>Contact</h2>
@@ -94,39 +94,39 @@
     <div class="row">
       <div class="col-12 col-md">
 
-        <small class="d-block mb-3 text-muted">&copy; 2017-2019</small>
+        <small class="d-block mb-3 text-muted">&copy; 2022 Benjamin Sams</small>
       </div>
       <div class="col-6 col-md">
-        <h5>Features</h5>
+        <h5>Follow Us</h5>
         <ul class="list-unstyled text-small">
-          <li><a class="text-muted" href="#">Cool stuff</a></li>
-          <li><a class="text-muted" href="#">Random feature</a></li>
-          <li><a class="text-muted" href="#">Team feature</a></li>
-          <li><a class="text-muted" href="#">Stuff for developers</a></li>
-          <li><a class="text-muted" href="#">Another one</a></li>
-          <li><a class="text-muted" href="#">Last time</a></li>
+          <li><a class="text-muted" href="#">Twitter</a></li>
+          <li><a class="text-muted" href="#">Facebook</a></li>
+          <li><a class="text-muted" href="#">Instagram</a></li>
+          <li><a class="text-muted" href="#">Pinterest</a></li>
+          <li><a class="text-muted" href="#">Yelp!</a></li>
+          <li><a class="text-muted" href="#">BBB</a></li>
+        </ul>
+      </div>
+      <div class="col-6 col-md">
+        <h5>Menus</h5>
+        <ul class="list-unstyled text-small">
+          <li><a class="text-muted" href="#">Breakfast</a></li>
+          <li><a class="text-muted" href="#">Lunch</a></li>
+          <li><a class="text-muted" href="#">Dinner</a></li>
+          <li><a class="text-muted" href="#">Catering</a></li>
         </ul>
       </div>
       <div class="col-6 col-md">
         <h5>Resources</h5>
         <ul class="list-unstyled text-small">
-          <li><a class="text-muted" href="#">Resource</a></li>
-          <li><a class="text-muted" href="#">Resource name</a></li>
-          <li><a class="text-muted" href="#">Another resource</a></li>
-          <li><a class="text-muted" href="#">Final resource</a></li>
+          <li><a class="text-muted" href="#">Events</a></li>
+          <li><a class="text-muted" href="#">Careers</a></li>
+          <li><a class="text-muted" href="#">Gallery</a></li>
+          <li><a class="text-muted" href="./contact.html">Contact Us</a></li>
         </ul>
       </div>
       <div class="col-6 col-md">
-        <h5>Resources</h5>
-        <ul class="list-unstyled text-small">
-          <li><a class="text-muted" href="#">Business</a></li>
-          <li><a class="text-muted" href="#">Education</a></li>
-          <li><a class="text-muted" href="#">Government</a></li>
-          <li><a class="text-muted" href="#">Gaming</a></li>
-        </ul>
-      </div>
-      <div class="col-6 col-md">
-        <h5>About</h5>
+        <h5>About Us</h5>
         <ul class="list-unstyled text-small">
           <li><a class="text-muted" href="#">Team</a></li>
           <li><a class="text-muted" href="#">Locations</a></li>
